--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "python.testing.autoTestDiscoverOnSaveEnabled": true,
     "python.testing.pytestEnabled": true,
     "python.testing.pytestArgs": [
-        "--verbose",
+        "-vvv",
     ],
     "python.formatting.provider": "autopep8",
 }
